@@ -1,4 +1,4 @@
-Copyright (c) 2019-2021, Andrzej Kapanowski
+Copyright (c) 2019-2022, Andrzej Kapanowski
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
